--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Это устанавливает высоту body как минимум на 100% видимой области. */
             background-color: white;
             font-family: 'Courier New', monospace;
         }
@@ -21,6 +24,7 @@
         }
         main {
             padding: 20px;
+            flex: 1; /* Это заставит основное содержимое занимать все доступное пространство, выталкивая футер вниз. */
         }
         footer {
             background-color: black;
