add function of login

--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -41,6 +41,7 @@
         </div>
         <div>
             <a href="{% url 'main_page' %}" style="color: white; text-decoration: none;">На главную</a> |
+            <a href="{% url 'login' %}" style="color: white; text-decoration: none;">Логин</a> |
             <a href="{% url 'signup' %}" style="color: white; text-decoration: none;">Регистрация</a> |
             <a href="{% url 'contacts' %}" style="color: white; text-decoration: none;">Контакты</a>
             <form class="d-inline" action="{% url 'search' %}" method="GET">
