add visibility of user status on site

--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -51,6 +51,13 @@
         </div>
     </header>
 
+    {% if user.is_authenticated %}
+    <header>
+        <p>Вы авторизовались как {{ user.username }}</p>
+        <!-- другие элементы хедера для аутентифицированных пользователей -->
+    </header>
+    {% endif %}
+
     <main>
         {% block content %}
         {% endblock %}
