--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -54,7 +54,10 @@
     {% if user.is_authenticated %}
     <header>
         <p>Вы авторизовались как {{ user.username }}</p>
-        <!-- другие элементы хедера для аутентифицированных пользователей -->
+        <form class="d-inline" action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit" style="color: white; text-decoration: none; background: none; border: none; cursor: pointer;">Выйти</button>
+        </form>
     </header>
     {% endif %}
 
