add function of posts creation and edition

--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -53,7 +53,8 @@
 
     {% if user.is_authenticated %}
     <header>
-        <p>Вы авторизовались как {{ user.username }}</p>
+        <p>Вы авторизовались как {{ user.username }}</p> |
+        <a href="{% url 'create_post' %}">Создать пост</a>
         <form class="d-inline" action="{% url 'logout' %}" method="post">
             {% csrf_token %}
             <button type="submit" style="color: white; text-decoration: none; background: none; border: none; cursor: pointer;">Выйти</button>
@@ -74,6 +75,12 @@
                     <p class="card-text">{{ post.content }}</p>
                     <p class="card-text">Автор: {{ post.author.username }}</p>
                     <p class="card-text">Дата создания: {{ post.created_at }}</p>
+
+                    {% if user.is_authenticated %}
+                        {% if user == post.author or user.userprofile.is_special_user %}
+                            <a href="{% url 'edit_post' post.id %}">Редактировать</a>
+                        {% endif %}
+                    {% endif %}
                 </div>
             </div>
         {% endfor %}
