--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -3,6 +3,7 @@
 {% block content %}
 <form method="post" action="{% url 'create_post' %}">
     {% csrf_token %}
+    {{ form.media }}
     {{ form.as_p }}
     <input type="submit" value="Создать пост">
 </form>
