--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -4,6 +4,7 @@
 <form method="post" action="{% url 'edit_post' post.id %}">
     {% csrf_token %}
     {{ form.as_p }}
+    {{ form.media }}
     <input type="submit" value="Сохранить изменения">
 </form>
 {% endblock %}
