--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -43,6 +43,10 @@
         .custom-header a.btn {
             margin-right: 10px;
         }
+        .card-title a {
+            color: inherit; /* Наследует цвет текста из родительского элемента */
+            text-decoration: none; /* Убирает подчеркивание */
+        }
     </style>
 </head>
 <body>
@@ -84,7 +88,7 @@
         {% for post in posts %}
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ post.title }}</h5>
+                    <h5 class="card-title"><a href="{% url 'view_post' post.id %}">{{ post.title }}</a></h5>
                     <p class="card-text">{{ post.content|safe }}</p>
 <!--                    <p class="card-text">Автор: {{ post.author.username }}</p> -->
                     <p class="card-text">Дата создания: {{ post.created_at }}</p>
