add new style for every post on main page

--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -47,6 +47,12 @@
             color: inherit; /* Наследует цвет текста из родительского элемента */
             text-decoration: none; /* Убирает подчеркивание */
         }
+        .card {
+            margin-bottom: 20px; /* Отступ между постами */
+            border: 2px solid black; /* Черный контур */
+            border-radius: 10px; /* Закругленные углы */
+            padding: 15px; /* Дополнительный отступ внутри поста */
+        }
     </style>
 </head>
 <body>
